test/regtest/cases/errors/unresolved_symbol3.kum
| disable_exec
использовать Черепаха
алг нач
 впред
кон